# KeycapRoot

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build_cache.bat
.github/workflows/: main.yml
build_scripts/: build_botan.bat  build_cache.bat  build_zlib.bat
cmake/: CompilerWarnings.cmake  FindBotan.cmake
src/include/Keycap/Root/: Algorithm.hpp
src/include/Keycap/Root/Algorithms/: Monads.hpp
src/include/Keycap/Root/Configuration/: ConfigFile.hpp
src/include/Keycap/Root/Network/: Connection.hpp  ConnectionBase.hpp  DataRouter.hpp  GenericConnectionHandler.hpp  LinkStatus.hpp  MemoryStream.hpp  MessageHandler.hpp  Service.hpp  ServiceBase.hpp
src/include/Keycap/Root/Network/Srp6/: Compliance.hpp  GroupParameters.hpp  Server.hpp  Utility.hpp
src/include/Keycap/Root/Utility/: Enum.hpp  ScopeExit.hpp  String.hpp  Utility.hpp  Version.hpp
src/include/keycap/root/: algorithm.hpp  exception.hpp  type_cast.hpp  types.hpp
src/include/keycap/root/compression/: zip.hpp
src/include/keycap/root/configuration/: config_file.hpp
src/include/keycap/root/cryptography/: ARC4.hpp  OTP.hpp
src/include/keycap/root/network/: connection.hpp  connection_base.hpp  data_router.hpp  link_status.hpp  memory_stream.hpp  message_handler.hpp  registered_message.hpp  service.hpp  service_base.hpp  service_connection.hpp  service_locator.hpp  service_type.hpp
src/include/keycap/root/network/srp6/: client.hpp  compliance.hpp  group_parameters.hpp  server.hpp  utility.hpp
src/include/keycap/root/utility/: assert.hpp  crc32.hpp  enum.hpp  md5.hpp  memory.hpp  meta.hpp  numbers.hpp  random.hpp  schedule.hpp  scope_exit.hpp  string.hpp  utility.hpp
src/libs/: CMakeLists.txt
src/libs/Network/: DataRouter.cpp  GenericConnectionHandler.cpp  MessageHandler.cpp
src/libs/Network/Srp6/: GroupParameters.cpp  Server.cpp  Utility.cpp
src/libs/Utility/: String.cpp  Utility.cpp  Version.cpp.in
src/libs/compression/: zip.cpp
src/libs/configuration/: config_file.cpp
src/libs/cryptography/: ARC4.cpp  OTP.cpp
src/libs/network/: connection.cpp  data_router.cpp  memory_stream.cpp  message_handler.cpp  service_base.cpp  service_locator.cpp
src/libs/network/srp6/: client.cpp  group_parameters.cpp  server.cpp  utility.cpp  utility.hpp
src/libs/utility/: crc32.cpp  md5.cpp  random.cpp  string.cpp  utility.cpp
src/test/: CMakeLists.txt  Test.cpp  main.cpp
src/test/Configuration/: ConfigFile.cpp  invalid.cfg
src/test/Network/: BaseConnectionHandler.hpp  DataRouter.cpp  GenericConnectionHandler.cpp  MemoryStream.cpp  Service.cpp
src/test/Network/Srp6/: Srp6.cpp
src/test/Utility/: Enum.cpp  Utility.cpp
src/test/compression/: zip.cpp
src/test/configuration/: config_file.cpp  test.cfg
src/test/cryptography/: ARC4.cpp  OTP.cpp
src/test/network/: data_router.cpp  memory_stream.cpp  service.cpp  service_locator.cpp
src/test/network/srp6/: srp6.cpp
src/test/utility/: crc32.cpp  md5.cpp  memory.cpp  random.cpp  utility.cpp
